fixing spacing for minimise

--- a/master.scss
+++ b/master.scss
@@ -87,7 +87,7 @@ body {
     border-radius: 18px;
 
     .content {
-        height: 250px;
+        height: 240px;
         padding: 26px 0;
         border-radius: 0 0 18px 18px;
         transition: opacity 0.4s 0.7s, height 0.4s, padding 0.4s;
@@ -161,8 +161,9 @@ body {
     border-radius: 18px;
 
     .content {
-        height: 550px;
+        height: 580px;
         border-radius: 0 0 18px 18px;
+        padding: 30px 0 0;
         transition: opacity 0.4s 0.7s, height 0.4s, padding 0.4s;
 
         .button {
@@ -195,7 +196,7 @@ body {
             padding: 10px 15px;
             border-radius: 4px;
             text-align: right;
-            margin: 30px auto;
+            margin: 0 auto 30px;
             font-weight: 400;
             letter-spacing: 6px;
             overflow: scroll;
